--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 body {
   background: #fff;
   color: #2f3138;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 a {
@@ -39,7 +39,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   margin: 0 0 20px 0;
   padding: 0;
@@ -64,7 +64,7 @@ h6 {
   width: 100%;
   height: 100%;
   overflow: visible;
-  background: #fff url("../img/preloader.svg") no-repeat center center;
+  background: #fff url('../img/preloader.svg') no-repeat center center;
 }
 
 /* Back to top button */
@@ -168,10 +168,10 @@ h6 {
   margin: 0;
   padding: 6px 0;
   line-height: 1;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   letter-spacing: 3px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 
 #header #logo h1 span {
@@ -240,7 +240,7 @@ h6 {
 }
 
 .sf-arrows .sf-with-ul:after {
-  content: "\f107";
+  content: '\f107';
   position: absolute;
   right: 15px;
   font-family: FontAwesome;
@@ -249,7 +249,7 @@ h6 {
 }
 
 .sf-arrows ul .sf-with-ul:after {
-  content: "\f105";
+  content: '\f105';
 }
 
 /* Nav Meu Container */
@@ -266,7 +266,7 @@ h6 {
   text-decoration: none;
   display: inline-block;
   color: rgba(202, 206, 221, 0.8);
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 600;
   font-size: 14px;
   outline: none;
@@ -282,7 +282,7 @@ h6 {
 }
 
 .nav-menu > li > a:before {
-  content: "";
+  content: '';
   position: absolute;
   width: 0;
   height: 2px;
@@ -476,7 +476,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #intro:before {
-  content: "";
+  content: '';
   background: rgba(6, 12, 34, 0.8);
   position: absolute;
   bottom: 0;
@@ -510,7 +510,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #intro h1 {
   color: #fff;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 56px;
   font-weight: 600;
   text-transform: uppercase;
@@ -601,7 +601,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #intro .about-btn {
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 500;
   font-size: 14px;
   letter-spacing: 1px;
@@ -655,7 +655,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------------------------------------*/
 
 #about {
-  background: url("../img/about-bg.jpg");
+  background: url('../img/about-bg.jpg');
   background-size: cover;
   overflow: hidden;
   position: relative;
@@ -664,7 +664,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #about:before {
-  content: "";
+  content: '';
   background: rgba(13, 20, 41, 0.8);
   position: absolute;
   bottom: 0;
@@ -834,7 +834,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #schedule .tab-pane {
-  transition: ease-in-out .2s;
+  transition: ease-in-out 0.2s;
 }
 
 #schedule .schedule-item {
@@ -908,7 +908,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #venue .venue-info {
-  background: url("../img/venue-info-bg.jpg") top center no-repeat;
+  background: url('../img/venue-info-bg.jpg') top center no-repeat;
   background-size: cover;
   position: relative;
   padding-top: 60px;
@@ -916,7 +916,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #venue .venue-info:before {
-  content: "";
+  content: '';
   background: rgba(13, 20, 41, 0.8);
   position: absolute;
   bottom: 0;
@@ -1123,7 +1123,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   padding: 18px 0;
   display: block;
   position: relative;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-size: 16px;
   line-height: 24px;
   font-weight: 600;
@@ -1150,7 +1150,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #faq #faq-list a.collapsed i::before {
-  content: "\f055" !important;
+  content: '\f055' !important;
 }
 
 /*--------------------------------------------------------------
@@ -1166,7 +1166,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #subscribe:before {
-  content: "";
+  content: '';
   background: rgba(6, 12, 34, 0.6);
   position: absolute;
   bottom: 0;
@@ -1218,7 +1218,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #buy-tickets .card {
   border: none;
   border-radius: 5px;
-  transition: all  0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   box-shadow: 0 10px 25px 0 rgba(6, 12, 34, 0.1);
 }
 
@@ -1373,7 +1373,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 15px;
 }
 
-#contact .form button[type="submit"] {
+#contact .form button[type='submit'] {
   background: #f82249;
   border: 0;
   padding: 10px 40px;
@@ -1383,7 +1383,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   cursor: pointer;
 }
 
-#contact .form button[type="submit"]:hover {
+#contact .form button[type='submit']:hover {
   background: #e0072f;
 }
 
@@ -1412,7 +1412,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin: 0 0 20px 0;
   padding: 2px 0 2px 0;
   line-height: 1;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 700;
   color: #fff;
 }
@@ -1426,7 +1426,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   font-size: 14px;
   line-height: 24px;
   margin-bottom: 0;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   color: #fff;
 }
 
@@ -1505,13 +1505,13 @@ body.mobile-nav-active #mobile-nav-toggle {
   margin-bottom: 30px;
 }
 
-#footer .footer-top .footer-newsletter input[type="email"] {
+#footer .footer-top .footer-newsletter input[type='email'] {
   border: 0;
   padding: 6px 8px;
   width: 65%;
 }
 
-#footer .footer-top .footer-newsletter input[type="submit"] {
+#footer .footer-top .footer-newsletter input[type='submit'] {
   background: #f82249;
   border: 0;
   width: 35%;
@@ -1522,7 +1522,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   cursor: pointer;
 }
 
-#footer .footer-top .footer-newsletter input[type="submit"]:hover {
+#footer .footer-top .footer-newsletter input[type='submit']:hover {
   background: #e0072f;
 }
 
