--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ h6 {
   margin: 0;
   padding: 6px 0;
   line-height: 1;
-  font-family: 'Raleway', sans-serif;
+  /* font-family: 'Raleway', sans-serif; */
   font-weight: 700;
   letter-spacing: 3px;
   /* text-transform: uppercase; */
@@ -511,7 +511,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 #intro h1 {
   color: #fff;
   font-family: 'Raleway', sans-serif;
-  font-size: 56px;
+  font-size: 50px;
   font-weight: 600;
   text-transform: uppercase;
 }
