--- a/css/style.css
+++ b/css/style.css
@@ -186,7 +186,7 @@ h6 {
 #header #logo img {
   padding: 0;
   margin: 0;
-  max-height: 40px;
+  max-height: 80px;
 }
 
 /*--------------------------------------------------------------
@@ -303,7 +303,7 @@ h6 {
 .nav-menu li.buy-tickets a {
   color: #fff;
   background: #f82249;
-  padding: 7px 22px;
+  padding: 17px 42px;
   border-radius: 50px;
   border: 2px solid #f82249;
   transition: all ease-in-out 0.3s;
@@ -311,7 +311,7 @@ h6 {
   margin-left: 8px;
   margin-top: 2px;
   line-height: 1;
-  font-size: 13px;
+  font-size: 18px;
 }
 
 .nav-menu li.buy-tickets a:hover {
@@ -474,6 +474,7 @@ body.mobile-nav-active #mobile-nav-toggle {
   overflow: hidden;
   position: relative;
 }
+
 
 #intro:before {
   content: '';
@@ -1212,7 +1213,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 --------------------------------------------------------------*/
 
 #buy-tickets {
-  padding: 60px 0;
+  padding: 60px 30px;
 }
 
 #buy-tickets .card {
@@ -1659,4 +1660,8 @@ body.mobile-nav-active #mobile-nav-toggle {
   #subscribe button {
     margin-top: 10px;
   }
+}
+
+#iprenear-info{
+  margin-top: 30px;
 }
