Added Speakers photos

--- a/css/style.css
+++ b/css/style.css
@@ -707,6 +707,8 @@ body.mobile-nav-active #mobile-nav-toggle {
   position: relative;
   overflow: hidden;
   margin-bottom: 30px;
+  border-radius: 100%;
+  width: 300px;
 }
 
 #speakers .speaker .details {
@@ -722,9 +724,9 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #speakers .speaker .details h3 {
   color: #fff;
-  font-size: 22px;
+  font-size: 18px;
   font-weight: 600;
-  margin-bottom: 5px;
+  margin-bottom: 10px;
 }
 
 #speakers .speaker .details p {
